Null 처리 및 마케팅 수신 동의 에러 해결